created basic templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Earth Alert</title>
+		<link href="static/css/index.css" rel="stylesheet" type="text/stylesheet" />
 	</head>
 	<body>
 		{% for event in events %}
