can now fetch long/lat from user

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,7 @@
 		{% for event in events %}
 			<div>id: {{ event.id }} type: {{ event.hazard_type }}</div>
 		{% endfor %}
+
+	<script src="static/js/earthalert.js"></script>
 	</body>
 </html>
