--- a/templates/report.html
+++ b/templates/report.html
@@ -5,8 +5,10 @@
 		<link href="static/css/report.css" rel="stylesheet" type="text/stylesheet" />
 	</head>
 	<body>
-		<form>
-			<!-- stuff here -->
+		<form action="/report" method="POST">
+			<input type="text" name = "text">
+			<input type="submit" name="my-form" value="Send">
 		</form>
+		{{ number }}
 	</body>
 </html>
