--- a/templates/index.html
+++ b/templates/index.html
@@ -46,9 +46,6 @@
     
 <div class="content">    
     <div class="landingContainer">
-    <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
         <h4>Landing Page</h4>
         
 
@@ -68,9 +65,8 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqqZYLz6Y4lJGuBatmPuHJxPt-Y75kNag&callback=initMap"
     async defer></script>
-      </div>
-        </div><!--Row -->
-  </div><!--Container -->
+
+  </div><!--Landing Container -->
         </div><!--Landing Container -->
     
     <div class="searchContainer">
