--- a/templates/report.html
+++ b/templates/report.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<form action="/report" method="POST">
-			<input type="text" name = "text">
-			<input type="submit" name="my-form" value="Send">
+			<input type="number" name = "text" maxlength="10">
+			<input type="submit" name="my-form" value="Send" >
 		</form>
 		{{ number }}
 	</body>
