added warning level endpoint

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p></p>
+
 
       </div>
     </div>
@@ -43,5 +42,6 @@
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="static/js/earthalert.js"></script>
 </body>
 </html>
