--- a/templates/index.html
+++ b/templates/index.html
@@ -103,5 +103,6 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="static/js/earthalert.js"></script>
+  <script src="static/js/d3-geo.min.js"></script>
 </body>
 </html>
