--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,10 +12,6 @@ ____________________________________*>
     z-index: 0;
 }
 
-.overlay {
-    z-index: 10;
-    }
-
 
 #map {
     height: 100%;
@@ -25,9 +21,23 @@ ____________________________________*>
 /* Navigation */
 .navigation {
     position: fixed;
-    height: 15vh;
-    background-color: green;
-    width: 100%
+    height: 8vh;
+    background-color: #f2f2f2;
+    color: #2d2d2d; 
+    width: 100%;
+    letter-spacing: 0.5em;
+    z-index: 10;
+}
+
+.navigation ul li {
+    float: left;
+    padding-right: 8%;
+    list-style: none;
+    
+}
+
+.navLogo{
+    float:left;
 }
 
 
@@ -39,10 +49,28 @@ ____________________________________*>
 .footer {
     position: fixed;
     bottom: 0;
-    height: 20vh;
-    background-color: red;
+    height: 8vh;
+    background-color: #24292e;
+    color: white;
     width: 100%;
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
 }
+
+.footer ul li {
+    float:left;
+    padding-right: 8%;
+    width: 25%;
+    list-style: none;
+    
+}
+
+
+.numberRequest{
+    width: 100%;
+    height: 5%;
+    background-color: 
+    }
 
 /* Larger than mobile */
 @media (min-width: 400px) {
