--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->   
@@ -43,11 +43,13 @@
         </div>
     </div>
     
+    <div class="numberRequest">
+        
+    </div>
+    
     
 <div class="content">    
-    <div class="landingContainer">
-        <h4>Landing Page</h4>
-        
+    <div class="landingContainer">       
 
   <div id="map"></div>
     <script>
