--- a/templates/index.html
+++ b/templates/index.html
@@ -52,16 +52,17 @@
   <div id="map"></div>
     <script>
       var map;
-  function initMap() {
-  map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 4,
-    center: {lat: -28, lng: 137}
-            });
+	  function initMap() {
+		  map = new google.maps.Map(document.getElementById('map'), {
+		    zoom: 8,
+		    minZoom: 2,
+		    maxZoom: 10,
+		    center: {lat: -28, lng: 137}
+			});
 
-  // NOTE: This uses cross-domain XHR, and may not work on older browsers.
-  map.data.loadGeoJson(
-      'https://pmmpublisher.pps.eosdis.nasa.gov/products/global_landslide_nowcast_30mn/export/Global/2017/118/global_landslide_nowcast_30mn.20170428.230000.geojson');
-        }
+		  map.data.setStyle({ fillColor:'red' });
+		  map.data.loadGeoJson('https://pmmpublisher.pps.eosdis.nasa.gov/products/global_landslide_nowcast_30mn/export/Global/2017/118/global_landslide_nowcast_30mn.20170428.230000.geojson');
+		}
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqqZYLz6Y4lJGuBatmPuHJxPt-Y75kNag&callback=initMap"
     async defer></script>
