--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,6 +20,7 @@ ____________________________________*>
 
 /* Navigation */
 .navigation {
+    display: flex;
     position: fixed;
     height: 8vh;
     background-color: #f2f2f2;
@@ -27,18 +28,42 @@ ____________________________________*>
     width: 100%;
     letter-spacing: 0.5em;
     z-index: 10;
+    letter-spacing: 0.6em;
+    text-transform: uppercase;
+    font-size: 1em;
+    text-align: center;
+    padding-top: 1%;
 }
+
+
+.navLogo {
+    float: left;
+}
+
+.navigation img {
+    width: 30%;
+}
+
+
+.headerText {padding-top: 15px;}
+.headerText p {margin-bottom: 0em;}
+
+
 
 .navigation ul li {
-    float: left;
+    float: right;
     padding-right: 8%;
     list-style: none;
-    
 }
 
-.navLogo{
-    float:left;
-}
+.numberRequest{
+    display: flex;
+    width: 100%;
+    background-color: #e04a3c;
+    color: white;
+    margin-top: 10vh;
+    position: fixed;
+    }
 
 
 
@@ -47,6 +72,7 @@ ____________________________________*>
 /*Footer */
 
 .footer {
+    display: flex;
     position: fixed;
     bottom: 0;
     height: 8vh;
@@ -55,6 +81,7 @@ ____________________________________*>
     width: 100%;
     text-transform: uppercase;
     letter-spacing: 0.5em;
+    text-align: center;
 }
 
 .footer ul li {
@@ -65,12 +92,11 @@ ____________________________________*>
     
 }
 
+.footer img {
+}
 
-.numberRequest{
-    width: 100%;
-    height: 5%;
-    background-color: 
-    }
+
+
 
 /* Larger than mobile */
 @media (min-width: 400px) {
