Changed map to terrain

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,8 @@
 		    zoom: 8,
 		    minZoom: 2,
 		    maxZoom: 10,
-		    center: {lat: -28, lng: 137}
+		    center: {lat: -28, lng: 137},
+            mapTypeId: 'terrain'
 			});
 
 		  map.data.setStyle({ fillColor:'red' });
