--- a/templates/index.html
+++ b/templates/index.html
@@ -43,12 +43,12 @@
 			var map;
 			function initMap(){
 				map = new google.maps.Map(document.getElementById('map'), {
-					zoom: 8,
+					zoom: 3,
 					minZoom: 2,
 					maxZoom: 10,
-					center: {lat: -28, lng: 137}
+					center: {lat: 33, lng: 3}
 				});
-				map.data.setStyle({ fillColor:'red' });
+				map.data.setStyle({ fillColor:'red', strokeWeight: 0, fillOpacity: 0.8});
 				map.data.loadGeoJson('https://pmmpublisher.pps.eosdis.nasa.gov/products/global_landslide_nowcast_30mn/export/Global/2017/118/global_landslide_nowcast_30mn.20170428.230000.geojson');
 			}
 		</script>
