debug risk level notification

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
 
 	    <div class="footer">
 			<div><img src="/static/img/upload.png"><span>Upload</span></div>
-			<div><img src="/static/img/edit.png"><span>Report</span></div>
+			<div onclick="report_event()"><img src="/static/img/edit.png"><span>Report</span></div>
 	    </div>
     </div><!--Main Website Content -->
 
