--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,13 @@
 		<div id="warning_box"></div>
     </div>
 
+    <div id ="myModal" class = "modal">
+      <div class = "modal-content">
+        <span class = "close">&times;</span>
+        <p> Just some text</p>
+      </div>
+    </div>
+
 	<div class="content">
 		<div id="map"></div>
 		<script>
@@ -64,6 +71,7 @@
 	    <div class="footer">
 			<div><img src="/static/img/upload.png"><span>Upload</span></div>
 			<div><img src="/static/img/edit.png"><span>Report</span></div>
+      <button id = "myBtn">Open Modal</button>
 	    </div>
     </div><!--Main Website Content -->
 
