--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,9 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" type="text/css" href="/static/css/main.css" media="screen" />
-
+    <link rel="stylesheet" type="text/css" href="/static/css/normalize.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/static/css/skeleton.css" media="screen" />
+  
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
