--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
+  
   ––––––––––––––––––––––––––––––––––––––––––––––––––
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" type="text/css" href="/static/css/main.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/static/css/normalize.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/static/css/skeleton.css" media="screen" />
   
