--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,8 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" type="text/css" href="/static/css/main.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/static/css/skeleton.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/static/css/normalize.css" media="screen" />
 
 
   <!-- Favicon
@@ -36,16 +38,11 @@
 		<div id="titlecard_wrapper">
 			<img src="/static/img/grey-logo.png">
 			<div id="header_text">Slide</div>
-		</div>
-		<div id="warning_box"></div>
+        </div>
     </div>
+    
+    <div id="warning_box"></div>
 
-    <div id ="myModal" class = "modal">
-      <div class = "modal-content">
-        <span class = "close">&times;</span>
-        <p> Just some text</p>
-      </div>
-    </div>
 
 	<div class="content">
 		<div id="map"></div>
