--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,7 @@
 }
 
 #titlecard_wrapper img {
-	height:100%;
+	height:65px;
 	width:auto;
 }
 
@@ -58,8 +58,7 @@
 }
 
 #map {
-	height: 80vh;
-	border: 1px solid black;
+	height: 100vh;
 }
 
 /*Footer */
@@ -69,7 +68,7 @@
 	bottom:0;
 	background-color: #24292e;
 	height:10vh;
-	width: calc(100% - 16px);
+	width: 100%;
 	align-items:center;
 	align-content:space-between;
 }
@@ -84,6 +83,11 @@
 	letter-spacing: 0.5em;
 }
 
+.footer img {
+	max-height:10vh;
+    width: 30px;
+}
+
 #report {
 	cursor:pointer;
 }
@@ -92,9 +96,7 @@
 	cursor:pointer;
 }
 
-.footer img {
-	max-height:10vh;
-}
+
 
 @media (max-width: 400px) {
 	.footer>div>span{
@@ -114,6 +116,10 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal p {
+    padding-bottom: 1em;
 }
 
 /* Modal Content/Box */
