--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
   <!-- FONT
   ––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -20,8 +21,9 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" type="text/css" href="/static/css/main.css" media="screen" />
-
-
+  <link rel="stylesheet" type="text/css" href="/static/css/animate.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="/static/css/skeleton.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/static/css/normalize.css" media="screen" />
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="/static/img/grey-logo.png">
@@ -40,12 +42,7 @@
 		<div id="warning_box"></div>
     </div>
 
-    <div id ="myModal" class = "modal">
-      <div class = "modal-content">
-        <span class = "close">&times;</span>
-        <p> Just some text</p>
-      </div>
-    </div>
+
 
 	<div class="content">
 		<div id="map"></div>
@@ -73,7 +70,7 @@
 	    <div class="footer">
 			<div id="upload" onclick="get_file();" ><img src="/static/img/upload.png"><span>Upload</span></div>
 			<div id="report" onclick="report_event();"><img src="/static/img/edit.png"><span>Report</span></div>
-	        <button id = "myBtn">Open Modal</button>
+	    <button class ="button" onclick="information();"></button>
 	    </div>
     </div><!--Main Website Content -->
 
@@ -113,5 +110,9 @@
 		}
 	</script>
 	<script src="static/js/earthalert.js"></script>
+  <script>
+
+  </script>
+
 </body>
 </html>
