--- a/templates/index.html
+++ b/templates/index.html
@@ -61,12 +61,9 @@
 				});
 				map.data.setStyle({ fillColor:'red', strokeWeight: 0, fillOpacity: 0.8});
 				map.data.loadGeoJson("{{ geo_url }}");
-				<!-- 'https://pmmpublisher.pps.eosdis.nasa.gov/products/global_landslide_nowcast_30mn/export/Global/2017/118/global_landslide_nowcast_30mn.20170428.230000.geojson' -->
 			}
 		</script>
-		<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqqZYLz6Y4lJGuBatmPuHJxPt-Y75kNag&callback=initMap">
-		</script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqqZYLz6Y4lJGuBatmPuHJxPt-Y75kNag&callback=initMap"></script>
 
 		<input id="file_input" type="file" name="name" style="display:none;" />
 
@@ -84,11 +81,17 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   	<script>
-		function init_events(){
+		EVENTS={{ events|safe }};
+		IMAGES={{ images|safe }};
+
+		for(var i =0; i<IMAGES.length;i++ ){
+			console.log(IMAGES[i].path);
+		}
+
+		function init_events( events ){
             var contentString = [];
-			var EVENTS={{ events|safe }};
-			for(var i =0; i < EVENTS.length;i++){
-				var data = EVENTS[i];
+			for(var i =0; i < events.length;i++){
+				var data = events[i];
 				contentString.push( '<div id="content">'+
 	            						'<h3 id="event_title">Landslide Report:</h3>'+
 	            						'<div id="event_description">'+
@@ -101,7 +104,7 @@
 		        	content: contentString[i]
 		        });
 				var marker = new google.maps.Marker({
-					position: {lat: parseFloat(data.latitude + 0.001*Math.random()), lng:parseFloat(data.longitude - 0.001*Math.random())},
+					position: {lat: parseFloat(data.latitude + 0.01*Math.random()), lng:parseFloat(data.longitude - 0.01*Math.random())},
 					title: 'Community Report',
                     icon: '/static/img/caution.png',
 					map: map
@@ -111,6 +114,34 @@
 				});
 			}
 		}
+
+		function init_images( images ){
+            var contentString = [];
+			for(var i =0; i < images.length;i++){
+				var image = images[i];
+				contentString.push( '<div id="content">'+
+	            						'<a href="' + image.path + '" target="_blank">' +
+	            							'<img class="upload_image" src="' + image.path + '"/>' +
+										'</a>' +
+	            					'</div>');
+
+		        var infowindow = new google.maps.InfoWindow({
+		        	content: contentString[i]
+		        });
+				var marker = new google.maps.Marker({
+					position: {lat: parseFloat(image.latitude + 0.01*Math.random()), lng:parseFloat(image.longitude - 0.01*Math.random())},
+					title: 'User Image',
+					map: map
+				});
+				marker.addListener('click', function(){
+					infowindow.open(map, marker);
+				});
+			}
+		}
+
+		init_events( EVENTS );
+		init_images( IMAGES );
+
 	</script>
 	<script src="static/js/earthalert.js"></script>
 </body>
