--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,13 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="/static/img/grey-logo.png">
+    <link rel="icon" type="image/png" href="/static/img/grey-logo.png">
+    
+<!--Scripts
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+    
 
 </head>
 <body>
@@ -37,7 +43,7 @@
   <!-- Primary Page Layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <div class="navigation">
+    <div class="navigation overlay">
 		<div id="titlecard_wrapper">
 			<img src="/static/img/grey-logo.png">
 			<div id="header_text">Slide</div>
@@ -46,40 +52,48 @@
 
     
     <div id="warning_box"></div>
+    
+        <div id="mapContainer">
+            <div id="map"></div>
+            <script>
+                var map;
+                function initMap(){
+                    map = new google.maps.Map(document.getElementById('map'), {
+                        mapTypeId: 'terrain',
+                        zoom: 3,
+                        minZoom: 2,
+                        maxZoom: 14,
+                        center: {lat: 33, lng: 3}
+                    });
+                    map.data.setStyle({ fillColor:'red', strokeWeight: 0, fillOpacity: 0.8});
+                    map.data.loadGeoJson("{{ geo_url }}");
+                    <!-- 'https://pmmpublisher.pps.eosdis.nasa.gov/products/global_landslide_nowcast_30mn/export/Global/2017/118/global_landslide_nowcast_30mn.20170428.230000.geojson' -->
+                }
+            </script>
+            <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqqZYLz6Y4lJGuBatmPuHJxPt-Y75kNag&callback=initMap">
+            </script>
+
+            <input id="file_input" type="file" name="name" style="display:none;" />
+        </div>
 
 
-
-    <div id="warning_box"></div>
-	<div class="content">
-		<div id="map"></div>
-		<script>
-			var map;
-			function initMap(){
-				map = new google.maps.Map(document.getElementById('map'), {
-					mapTypeId: 'terrain',
-                    zoom: 3,
-					minZoom: 2,
-					maxZoom: 14,
-					center: {lat: 33, lng: 3}
-				});
-				map.data.setStyle({ fillColor:'red', strokeWeight: 0, fillOpacity: 0.8});
-				map.data.loadGeoJson("{{ geo_url }}");
-				<!-- 'https://pmmpublisher.pps.eosdis.nasa.gov/products/global_landslide_nowcast_30mn/export/Global/2017/118/global_landslide_nowcast_30mn.20170428.230000.geojson' -->
-			}
-		</script>
-		<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqqZYLz6Y4lJGuBatmPuHJxPt-Y75kNag&callback=initMap">
-		</script>
-
-		<input id="file_input" type="file" name="name" style="display:none;" />
-
-	    <div class="footer">
-			<div id="upload" onclick="get_file();" ><img src="/static/img/upload.png"></div>
+	    
+    
+    <div class="footer">
+			<div id="upload" ><img src="/static/img/upload.png"></div>
             <div id="report" onclick="report_event();"><img src="/static/img/edit.png"></div>
             <div id="info" onclick="report_event();"><img src="/static/img/info.png"></div>
-            
 	    </div>
-    </div><!--Main Website Content -->
+    
+    <div class="modals">
+            <div id="imageUploadContainer">
+                <p>Upload your photos to help the community know of dangerous situations.</p>
+                <button class="button-primary" value="Upload" id="upload" onclick="get_file();" >Upload</button>
+            </div>
+            <div id="editReportContainer"><p></p></div>
+            <div id="inforContainer"></div>
+        </div>
 
 
 
