--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,7 +83,6 @@
 
 .modals {
     width: 100%;
-    display: block;
 }
 
 #imageUploadContainer {background-color: #f7f7f7; position: absolute; height:50%; width: 50%;}
@@ -106,16 +105,8 @@
 	cursor:pointer;
 }
 
-<<<<<<< HEAD
 
 
-
-=======
-.upload_image {
-	width:100px;
-	height:auto;
-}
->>>>>>> d9aae8f88f299df9530c4c9efb1da82f088f08e1
 
 /*Footer */
 .footer {
@@ -153,7 +144,7 @@
 		display:none;
 	}
 }
-<<<<<<< HEAD
+
 
 /* The Modal (background) */
 .modal {
@@ -196,5 +187,10 @@
     text-decoration: none;
     cursor: pointer;
 }
-=======
->>>>>>> d9aae8f88f299df9530c4c9efb1da82f088f08e1
+
+
+
+/* Utilities */
+
+.displayNone {display: none; visibility: none;}
+.displayBlock {display: block; visibility: visible;}
