--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
             <div id="infoContainer" class="displayNone">
                 <img style="max-width:100%;" src="https://placehold.it/350x150">
                 <h4>About EarthAlert</h4>
-                <p>At Earth Alert, we don't think you should have to use an API to view life-saving information. By enabling access to existing NASA resources, we are able to provide vital data to those who need it most. Moreover, we believe in the power of community contributions and allowing individuals to help themselves and those around them by adding on-the-ground information which can enable emergency responders to effectively respond where they are needed. 
+                <p>At Earth Alert, we don't think you should have to use an API to view life-saving information. By enabling access to existing NASA resources, we are able to provide vital data to those who need it most. Moreover, we believe in the power of community contributions and allowing individuals to help themselves and those around them by adding on-the-ground information which can enable emergency responders to effectively respond where they are needed.
 <h4>Team</h4>
 We are a team of five college students from the University of Huntsville in Alabama and Case Western Reserve University in Cleveland. Our backgrounds range from mechanical engineering to art animation to computer science. We are passionate about many things including Python, web development, and hard problems in general. Despite officially meeting all together for the first time on Saturday morning of the NASA Space Apps Challenge, we bonded quickly over the 36-hour sprint to make SLIDE. As a team, we have been able to utilize our different backgrounds in order to create an application that we not only take great pride in, but that can actively improve the world by democratizing access to information.
 
@@ -182,6 +182,7 @@ We are a team of five college students from the University of Huntsville in Alab
 				var image = images[i];
 				contentString.push( '<div id="content">'+
 	            							'<a href="' + image.path + '"><img src="' + image.path + '" /></a>' +
+											'test' +
 	            						'</div>'+
 	            					'</div>');
 
@@ -198,9 +199,9 @@ We are a team of five college students from the University of Huntsville in Alab
 				});
 			}
 		}
-        
+
         window.EVENTS = EVENTS;
-        
+
 		init_events( EVENTS );
 		init_images( IMAGES );
 
